--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1> Welcome to Konnect United </h1>
 
-<p> to join email us at konnectunited.com </p>
+<p> to join us and be notified of new event > email us at konnectunited@gmail.com </p>
+
+<p>Next event takes place April 8th! Stay tuned! </p>
