--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 
 <p> to join us and be notified of new event > email us at konnectunited@gmail.com </p>
 
-<p>Next event takes place April 8th! Stay tuned! </p>
+<p><a href="https://www.canva.com/design/DAE6B0AP_vg/JZqfFOmxA_8yF72GYNRFLA/view?utm_content=DAE6B0AP_vg&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">RUBY FALLS April 9th trip poster</a></p>
