--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1> Welcome to Konnect United </h1>
 
-<p> to join us and be notified of new event > email us at konnectunited@gmail.com </p>
+<p> to join us and be notified of new events > email us at konnectunited@gmail.com </p>
 
-<p><a href="https://www.canva.com/design/DAE6B0AP_vg/JZqfFOmxA_8yF72GYNRFLA/view?utm_content=DAE6B0AP_vg&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">RUBY FALLS April 9th trip poster</a></p>
+<p><a href="https://drive.google.com/file/d/18OqkPzEgWFo-DqjKVoY60NWHXWh1HkQx/view?usp=sharing">RUBY FALLS April 9th trip poster</a></p>
