--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 
 <p> to join us and be notified of new events > email us at konnectunited@gmail.com </p>
 
-<p><a href="https://drive.google.com/file/d/18OqkPzEgWFo-DqjKVoY60NWHXWh1HkQx/view?usp=sharing">RUBY FALLS April 9th trip poster</a></p>
+<a href="https://drive.google.com/file/d/18OqkPzEgWFo-DqjKVoY60NWHXWh1HkQx/view?usp=sharing">RUBY FALLS April 9th trip poster</a>
