--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body>
+<html><body>
 
 <h1> Welcome to Konnect United </h1>
 
@@ -7,3 +7,4 @@
 <a href="https://drive.google.com/file/d/18OqkPzEgWFo-DqjKVoY60NWHXWh1HkQx/view?usp=sharing">RUBY FALLS April 9th trip poster</a>
 
 </body>
+</html>
