--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <p> to join us and be notified of new events > email us at konnectunited@gmail.com </p>
 
-<a href="https://drive.google.com/file/d/18OqkPzEgWFo-DqjKVoY60NWHXWh1HkQx/view?usp=sharing">RUBY FALLS April 9th trip poster</a>
+<a href="rubyfalls.png">RUBY FALLS April 9th trip poster</a>
 
 </body>
 </html>
