--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <p> to join us and be notified of new events > email us at konnectunited@gmail.com </p>
 
-<a href="RUBYFALLS.png">RUBY FALLS April 9th trip poster</a>
+<a href="images/rubyfalls.html">RUBY FALLS April 9th trip poster</a>
 
 </body>
 </html>
